--- a/vue-app/src/assets/main.css
+++ b/vue-app/src/assets/main.css
@@ -2,7 +2,6 @@
 #app {
   max-width: 100%;
   height: 100%;
-  margin: 0 auto;
-  padding: 1rem;
   font-weight: normal;
+  background-color: #202020;
 }
